solved overlapping article tile problem

--- a/css/hv-article-tile.css
+++ b/css/hv-article-tile.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 100%;
   max-width: 400px;
-  min-width: 300px;
   height: 220px;
   background: black;
 }
@@ -55,8 +54,8 @@
     font-family: arial;
     box-shadow: 10px 0 0 rgba(0,0,0,0.6);
     color: #fff;
-    font-size: 1.02em;
-    line-height: 1.1em;
+    font-size: 4.2vh;
+    line-height: 4.2vh;
     background: rgba(0,0,0,0.6);
 }
 
